crates/scribe2-boundary/src/snapshots/scribe2__tests__ledger_lint_doctor_external_form.snap
---
source: crates/scribe2/src/main.rs
expression: masked
---
scribe2
scribe2 [version] ([commit])
host-template=unreadable
init=unmeasured:no-repo next=-
ledger: open=8 contracts=4 unresolved=1 bodied=2 memos=4 unpointed=3 unresolved:s2-u.1 bodied:s2-b.1,s2-b.2 unpointed:s2-m.1,s2-m.2,s2-m.3
ledger: open=1 contracts=1 unresolved=0 bodied=0 memos=0 unpointed=0
ledger: unreadable reason=ledger-unreadable
usage: scribe2 <name|--version|doctor|account|rules|fleet|vessel|hook|host-guard|pipe|runner|lens|seat|polarity|contracts|utterance>
scribe2 [version] ([commit])
